--- a/index.html
+++ b/index.html
@@ -136,84 +136,70 @@
 
 	<div id="skills" class="container pt-7">
 		<h1 class="display-4">Skills</h1>
-		<ul class="list-group list-group-flush">
-			<li class="list-group-item">
-				<div class="row">
-					<div class="col-sm">
-						<div class="border border-secondary progress progress-skills mb-2">
-							<div class="progress-bar bg-success" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"
-							 style="width: 95%"><strong>95%</strong></div>
-						</div>
-					</div>
-					<div class="col-sm">
-						<h5>Python</h5>
-						<ul>
-							<li>Jupyter Notebooks</li>
-							<li>Pandas Framework</li>
-							<li>Matplotlib Plotting</li>
-							<li>scikit-learn Machine Learning</li>
-							<li>spaCy NLP</li>
-						</ul>
-					</div>
+		<div class="row">
+			<div class="col-sm">
+				<div class="border border-secondary progress progress-skills mb-2">
+					<div class="progress-bar bg-success" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%"><strong>95%</strong></div>
 				</div>
-			</li>
-			<li class="list-group-item">
-				<div class="row">
-					<div class="col-sm">
-						<div class="border border-secondary progress progress-skills mb-2">
-							<div class="progress-bar bg-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
-							 style="width: 90%"><strong>90%</strong></div>
-						</div>
-					</div>
-					<div class="col-sm">
-						<h5>GIS (Geographic Information Science)</h5>
-						<ul>
-							<li>ArcGIS Pro</li>
-							<li>ArcGIS Online</li>
-							<li>ArcGIS JavaScript API 4.X</li>
-							<li>ArcPy</li>
-						</ul>
-					</div>
+			</div>
+			<div class="col-sm">
+				<h5>Python</h5>
+				<ul>
+					<li>Jupyter Notebooks</li>
+					<li>Pandas Framework</li>
+					<li>Matplotlib Plotting</li>
+					<li>scikit-learn Machine Learning</li>
+					<li>spaCy NLP</li>
+				</ul>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm">
+				<div class="border border-secondary progress progress-skills mb-2">
+					<div class="progress-bar bg-success" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%"><strong>90%</strong></div>
 				</div>
-			</li>
-			<li class="list-group-item">
-				<div class="row">
-					<div class="col-sm">
-						<div class="border border-secondary progress progress-skills mb-2">
-							<div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-							 style="width: 80%"><strong>80%</strong></div>
-						</div>
-					</div>
-					<div class="col-sm">
-						<h5>Web App Development</h5>
-						<ul>
-							<li>ArcGIS Web App Builder</li>
-							<li>Ionic Framework</li>
-							<li>HTML + Bootstrap</li>
-						</ul>
-					</div>
+			</div>
+			<div class="col-sm">
+				<h5>GIS (Geographic Information Science)</h5>
+				<ul>
+					<li>ArcGIS Pro</li>
+					<li>ArcGIS Online</li>
+					<li>ArcGIS JavaScript API 4.X</li>
+					<li>ArcPy</li>
+				</ul>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm">
+				<div class="border border-secondary progress progress-skills mb-2">
+					<div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><strong>80%</strong></div>
 				</div>
-			</li>
-			<li class="list-group-item">
-				<div class="row">
-					<div class="col-sm">
-						<div class="border border-secondary progress progress-skills mb-2">
-							<div class="progress-bar bg-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
-							 style="width: 75%"><strong>75%</strong></div>
-						</div>
-					</div>
-					<div class="col-sm">
-						<h5>Teaching</h5>
-						<ul>
-							<li>Problem Solving</li>
-							<li>Performing Lectures</li>
-							<li>Quantitative Feedback</li>
-							<li>Teamwork</li>
-						</ul>
-					</div>
+			</div>
+			<div class="col-sm">
+				<h5>Web App Development</h5>
+				<ul>
+					<li>ArcGIS Web App Builder</li>
+					<li>Ionic Framework</li>
+					<li>HTML + Bootstrap</li>
+				</ul>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm">
+				<div class="border border-secondary progress progress-skills mb-2">
+					<div class="progress-bar bg-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"><strong>75%</strong></div>
 				</div>
-			</li>
-		</ul>
+			</div>
+			<div class="col-sm">
+				<h5>Teaching</h5>
+				<ul>
+					<li>Problem Solving</li>
+					<li>Performing Lectures</li>
+					<li>Quantitative Feedback</li>
+					<li>Teamwork</li>
+				</ul>
+			</div>
+		</div>
 	</div>
 
 	<div id="education" class="container pt-7">
@@ -649,7 +635,7 @@
 										To prove that you are not a robot, please answer the question:
 									</p>
 									<p>
-										If the run rises in the East, and sets in West, and the moon can be seen during daytime and night time in the
+										If the sun rises in the East, and sets in West, and the moon can be seen during daytime and night time in the
 										sky, what covers over 70% of the Earth, can be seen from space, and looks mostly blue if the sun is constantly
 										shining down on it?
 									</p>
